removed break element on terms and conditions if unticked to help with layout issues and updated ID in location input ready for javascript

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -330,14 +330,13 @@ input[data-error]::after {
   left: 21%;
   top: 19%;
 }
-.checkbox2-errormsg {
+.errormsg {
   position: relative;
-  margin-left: 36px;
+  margin: 12px 36px;
   font-size: 12px;
   font-weight: normal;
   color: #fe142f;
   display: none;
-
 }
 .close {
   position: absolute;
